# mdex

./: .gitignore  AGENT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  pylock.toml  pyproject.toml
.claude/commands/: finish-task.md  start-task.md
.github/locks/: pypi_release_hashes.json
.github/scripts/: export_release_hashes.py  install_from_pylock.py
.github/workflows/: ci.yml  codeql.yml  release.yml
.semgrep/: mdex-python.yml
control/: scan_config.json
docs/: adoption_guide.md  agent_integration.md  context_hygiene.md  context_scoring.md  convention.md  design.md  examples.md  examples_before_after.md  getting_started.md  phase_a_agent_flow.md  proposal.md  proposal_discovery_lane.md  release_process.md  schema_versioning.md  support_matrix.md  update_policy.md
docs/archive/: phase_a_agent_flow.md
examples/private/: README.md  yura_memory_scan_config.json
mdex/: __init__.py  builder.py  cli.py  context.py  contract.py  dbresolve.py  doctor.py  enrich.py  finish.py  gittools.py  impact.py  indexer.py  observe.py  parser.py  resolver.py  scaffold.py  scanner.py  start.py  store.py  tokens.py
runtime/: __init__.py  builder.py  cli.py  context.py  dbresolve.py  enrich.py  finish.py  gittools.py  impact.py  indexer.py  parser.py  reader.py  resolver.py  scaffold.py  scanner.py  start.py  store.py
schemas/: context.schema.json  doctor.schema.json  error.schema.json  finish.schema.json  impact.schema.json  scan.schema.json  start.schema.json  telemetry_event.schema.json
scripts/: mdex_finish.py  mdex_start.py
tasks/: README.md  T20260406190559.md  T20260406190612.md  T20260406190626.md  T20260409033710.md  T20260409033724.md  T20260409033738.md  T20260409035436.md  T20260409035943.md  T20260409041339.md  T20260409043442.md  T20260409043448.md  T20260409043453.md  T20260409043504.md  T20260409043510.md  T20260409051713.md  T20260409051722.md  T20260409051728.md  T20260409052031.md  T20260409052336.md  T20260409054321.md  T20260409054336.md  T20260409054351.md  T20260409054358.md  T20260409054405.md  T20260409054415.md  T20260409054426.md  T20260409062212.md  T20260409071013.md  T20260409071019.md  T20260409071025.md  T20260409071036.md  T20260409080724.md  T20260409080725.md  T20260409080726.md  T20260409121633.md  T20260409121639.md  T20260409121647.md  T20260409124030.md  T20260409124118.md  (+74 more)
tasks/done/: T20260406190559.md  T20260406190612.md  T20260406190626.md  T20260409033710.md  T20260409033724.md  T20260409033738.md  T20260409035436.md  T20260409035943.md  T20260409041339.md  T20260409043442.md  T20260409043448.md  T20260409043453.md  T20260409043504.md  T20260409043510.md  T20260409051713.md  T20260409051722.md  (+95 more)
tests/: conftest.py  test_cli_e2e.py  test_cli_payload.py  test_context.py  test_dbresolve.py  test_docs_consistency.py  test_doctor.py  test_enrich.py  test_finish.py  test_gittools.py  test_impact.py  test_install_from_pylock_script.py  test_mdex.py  test_phase_a_cli.py  test_reader.py  test_readme_examples.py  test_resolver.py  test_scanner.py  test_schema_contracts.py  test_start.py  test_store.py
(+29 files in other folders)
