[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdex-cli"
version = "0.1.0"
description = "Markdown/JSON indexer and lightweight graph-based explorer"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
maintainers = [
  { name = "syaripin-i8i" },
]
dependencies = [
  "PyYAML>=6.0",
]

[project.urls]
Repository = "https://github.com/syaripin-i8i/mdex"
Issues = "https://github.com/syaripin-i8i/mdex/issues"
Changelog = "https://github.com/syaripin-i8i/mdex/blob/main/CHANGELOG.md"
Security = "https://github.com/syaripin-i8i/mdex/security/policy"

[project.optional-dependencies]
dev = [
  "jsonschema>=4.20",
  "pip-audit>=2.7",
  "pytest>=8.0",
]

[project.scripts]
mdex = "runtime.cli:main"

[tool.setuptools]
packages = ["runtime"]

[tool.pytest.ini_options]
testpaths = ["tests"]
